# nlp_to_sql

./: .env.template  QUICKSTART.md  README.md  app.py  database.py  example.db  main.py  nlp_to_sql_agent.py  pyproject.toml  run.py  sql_schema.py  test_tools.py  tools.py  web_app.py
